--- a/Otlob.APIs/appsettings.json
+++ b/Otlob.APIs/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=OtlobDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
-  }
+  },
+  "ApiBaseUrl": "https://localhost:7250"
 }
